--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -7,7 +7,7 @@
     android:padding="5dp">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
         <ImageView
@@ -28,33 +28,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-                    <!--android:text="Name"-->
-                    <!--/>-->
-                <!--<EditText-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:id="@+id/editText_name"-->
-                    <!--android:layout_marginTop="5dp"-->
-                    <!--android:layout_marginBottom="5dp"-->
-                    <!--android:singleLine="true"-->
-                    <!--android:windowSoftInputMode="stateHidden"/>-->
+                >
+
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textInputLayout_memberName"
                     android:layout_toRightOf="@+id/imageView_email"
-                    android:layout_below="@+id/textView_Contact">
+                    android:maxLines="1">
 
-                    <android.support.design.widget.TextInputEditText
+                <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
                         android:id="@+id/editText_memberName"
                         android:hint="Name"/>
 
@@ -70,6 +57,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
                         android:id="@+id/editText_memberBio"
                         android:hint="About Yourself"/>
 
@@ -81,7 +69,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/textView_branch"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Branch" />
+                    android:text="Branch"
+                    android:layout_marginLeft="5dp" />
 
                 <Spinner
                     android:layout_width="match_parent"
@@ -89,13 +78,15 @@
                     android:id="@+id/spinner_branch"
                     android:entries="@array/branch_array"
                     android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp" />
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="10dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Year of Passing"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:id="@+id/edit_textView_year"/>
+                    android:id="@+id/edit_textView_year"
+                    android:layout_marginLeft="5dp" />
                 <Spinner
                     android:layout_width="match_parent"
                     android:id="@+id/spinner_year"
@@ -104,7 +95,8 @@
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/edit_textView_year"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp" />
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -113,11 +105,10 @@
 
 
         <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="0dp"
+
             android:layout_gravity="left|center"
             android:layout_below="@+id/cardView_name"
             android:layout_alignParentLeft="true"
@@ -146,7 +137,8 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="10dp"            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                        android:maxLines="1"
                         android:id="@+id/editText_jobDescription"
                         android:hint="Designation"/>
 
@@ -156,12 +148,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView_company"
-                    android:layout_below="@+id/textView_memberDesignation">
+                    android:layout_below="@+id/textView_memberDesignation"
+                    android:layout_toRightOf="@+id/imageView_work"
+                    android:layout_toEndOf="@+id/imageView_work">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="10dp"            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                        android:maxLines="1"
                         android:id="@+id/editText_company"
                         android:hint="Company"/>
 
@@ -210,11 +205,6 @@
                     android:layout_marginTop="5dp"
                     android:layout_below="@id/textView_univ"/>
 
-
-
-
-
-
                 <TextView
                     android:id="@+id/info_text"
                     android:layout_width="wrap_content"
@@ -236,6 +226,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
                         android:id="@+id/editText_locationHome"
                         android:hint="Home Town"/>
 
@@ -254,6 +245,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
+
                         android:id="@+id/editText_locationWork"
                         android:hint="Company"/>
 
@@ -288,7 +281,6 @@
             </RelativeLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_contact"
             android:layout_gravity="center"
             android:layout_width="match_parent"
@@ -313,26 +305,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Contact"
+                    android:text="@string/contact"
                     android:id="@+id/textView_Contact"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="10dp" />
 
                 <!-- Edit text of new twitter -->
-
-
-
-
-                <!--<EditText-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:hint="Email"-->
-                <!--android:singleLine="true"-->
-                <!--android:inputType="textEmailAddress"-->
-                <!--android:id="@+id/editText_mail"-->
-                <!--android:layout_below="@+id/textInputLayout_twitter"-->
-                <!--android:layout_marginTop="5dp" />-->
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -345,6 +324,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
+                        android:inputType="textEmailAddress"
                         android:id="@+id/editText_memberEmail"
                         android:hint="e-mail address"/>
 
@@ -361,6 +342,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:inputType="phone"
+                        android:maxLines="1"
                         android:id="@+id/editText_memberPhone"
                         android:hint="Phone Number"/>
 
@@ -377,6 +360,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
+                        android:inputType="textWebEditText"
                         android:id="@+id/editText_memberWebLink"
                         android:hint="Web Links"/>
 
