--- a/app/src/main/res/layout/fragment_post_job.xml
+++ b/app/src/main/res/layout/fragment_post_job.xml
@@ -35,6 +35,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/editText_companyName"
+                        android:maxLines="1"
                         android:hint="Name Of Company"/>
 
                 </android.support.design.widget.TextInputLayout>
@@ -47,6 +48,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
+                        android:maxLines="1"
                         android:id="@+id/editText_companyDescription"
                         android:hint="Description of Company"/>
 
@@ -80,7 +82,8 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                    android:id="@+id/editText_jobDescription"
+                        android:id="@+id/editText_jobDescription"
+                        android:maxLines="3"
                         android:hint="Description of Job"/>
 
                 </android.support.design.widget.TextInputLayout>
@@ -108,8 +111,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
                         android:id="@+id/editText_jobLocation"
-                        android:hint="Location"/>
+                        android:hint="@string/location"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -142,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Contact"
+                    android:text="@string/contact"
                     android:id="@+id/textView_Contact"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
@@ -160,6 +164,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
+                        android:inputType="textEmailAddress"
                         android:id="@+id/editText_memberEmail"
                         android:hint="e-mail address"/>
 
@@ -176,6 +182,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
+                        android:inputType="phone"
                         android:id="@+id/editText_companyPhone"
                         android:hint="Phone Number"/>
 
@@ -192,6 +200,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:maxLines="1"
+                        android:inputType="textWebEditText"
                         android:id="@+id/editText_companyWebLink"
                         android:hint="Web Links"/>
 
