--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,6 +10,17 @@
         android:layout_height="2dp"
         android:id="@+id/progressBar" />
 
+
+    <com.mikepenz.iconics.view.IconicsImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/imageViewWebViewError"
+        android:layout_below="@+id/progressBar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="68dp" />
+
+
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,4 +28,4 @@
 
     </WebView>
 
-</LinearLayout>
+</RelativeLayout>
