--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="cardview_dark_background">#FF4081</color>
+    <color name="colorAccent">#e53935</color>
+    <color name="cardview_dark_background">#e53935</color>
     <color name="grey">#9e9e9e</color>
     <color name="appTheme">#e53935</color>
 
