--- a/app/src/main/res/layout/list_layout_job.xml
+++ b/app/src/main/res/layout/list_layout_job.xml
@@ -15,8 +15,7 @@
         android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/image"
-        android:layout_marginTop="5dp" />
+        android:src="@drawable/image" />
 
     <TextView
         android:layout_width="wrap_content"
