--- a/app/src/main/res/layout/activity_activity_member.xml
+++ b/app/src/main/res/layout/activity_activity_member.xml
@@ -15,7 +15,7 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:name="com.example.ashish.alumini.Fragments.FragmentMenu"
+        android:name="com.example.ashish.alumini.fragments.FragmentMenu"
         android:id="@+id/fragmentMenuContainer"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
