--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -2,13 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1" >
+     >
 
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:id="@+id/profileimage"
-        android:layout_weight="0.18"
         android:layout_margin="0dp"
         android:src="@drawable/image"
         android:layout_marginBottom="0dp"
@@ -20,7 +19,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/textView_name"
-        android:layout_weight="0.06"
+
         android:textColor="@color/cardview_dark_background"
         android:layout_gravity="center_horizontal"
         android:layout_alignTop="@+id/profileimage"
@@ -28,7 +27,7 @@
         android:layout_toEndOf="@+id/profileimage"
         android:layout_marginBottom="2dp"
         android:layout_margin="5dp"
-        android:textSize="18dp" />
+        android:textSize="18sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,7 +38,7 @@
         android:layout_toRightOf="@+id/briefcase"
         android:layout_toEndOf="@+id/briefcase"
         android:layout_marginLeft="3dp"
-        android:textSize="14dp" />
+        android:textSize="14sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,13 +49,13 @@
         android:layout_toRightOf="@+id/icon_location"
         android:layout_toEndOf="@+id/icon_location"
         android:layout_marginLeft="3dp"
-        android:textSize="14dp" />
+        android:textSize="14sp" />
 
-    <ImageView
+    <com.mikepenz.iconics.view.IconicsImageView
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:id="@+id/icon_location"
-        android:src="@drawable/location"
+
         android:layout_below="@+id/textView_designation"
         android:layout_alignLeft="@+id/briefcase"
         android:layout_alignStart="@+id/briefcase"
